# sparse

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/capp/: CMakeLists.txt
src/capp/src/: main.c
src/clib/: CMakeLists.txt
src/clib/include/csparse/: csparse.h
src/clib/src/: csr.c  csr.fdb_latexmk  csr.fls
src/lib/: CMakeLists.txt
src/lib/include/: CSR.h  DOK.h  index.h
src/lib/include/sparse/: sparse.h
src/lib/src/: CSR.cpp  DOK.cpp  index.cpp
